# arris-kabelbox

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/arris/: __init__.py  __main__.py  cli.py  config.py
src/arris/core/: exceptions.py  forms.py  retry.py  session.py  tables.py  waits.py
src/arris/models/: __init__.py  dhcp_lease.py  port_rule.py  wifi_config.py
src/arris/pages/: base.py  device.py  dhcp.py  firewall.py  network.py  port_forwarding.py  status.py  wifi.py
tests/: conftest.py  test_config.py  test_dhcp_server_integration.py  test_dhcp_sync.py  test_models.py  test_retry.py
