[project]
name = "arris-kabelbox"
version = "0.1.0"
description = "Declarative configuration management for ARRIS/Vodafone Kabelbox routers"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.15",
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
kabelbox = "arris.cli:cli"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arris"]
